<resources>
    <string name="app_name">EGPMS</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>

    <string name="drawer_header_title">.egtab</string>

    <string name="drawer_bg_description">background</string>
    <string name="action_add_config">new egtab record</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="edit_label_name">name</string>
    <string name="edit_label_proto">proto</string>
    <string name="edit_label_ip">ip</string>
    <string name="edit_label_port">port</string>
    <string name="edit_label_pass">pass</string>
    <string name="edit_hint_name">alias</string>


</resources>
