<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <EditText
        android:id="@+id/edit_name"
        android:hint="@string/edit_hint_name"
        style="@style/EditItem" />

    <TextView
        android:text="@string/edit_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/edit_name"
        app:layout_constraintTop_toTopOf="@id/edit_name"
        />

    <Spinner
        android:id="@+id/edit_proto"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_marginStart="@dimen/edit_item_marginStart"
        android:layout_marginEnd="@dimen/edit_item_marginEnd"
        android:layout_marginTop="@dimen/edit_item_marginTop"
        android:layout_marginBottom="@dimen/edit_item_marginBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"
        >

    </Spinner>

    <TextView
        android:text="@string/edit_label_proto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/edit_proto"
        app:layout_constraintTop_toTopOf="@id/edit_proto"
        />

    <EditText
        android:id="@+id/edit_address"
        android:inputType="number|numberDecimal"
        android:digits="0123456789."
        android:layout_marginTop="@dimen/edit_item_marginTop"
        style="@style/EditItem"
        app:layout_constraintTop_toBottomOf="@+id/edit_proto"/>

    <TextView
        android:text="@string/edit_label_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/edit_address"
        app:layout_constraintTop_toTopOf="@id/edit_address"
        />

    <EditText
        android:id="@+id/edit_port"
        android:inputType="number|numberDecimal"
        android:digits="0123456789."
        android:layout_marginTop="@dimen/edit_item_marginTop"
        style="@style/EditItem"
        app:layout_constraintTop_toBottomOf="@+id/edit_address"/>

    <TextView
        android:text="@string/edit_label_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/edit_port"
        app:layout_constraintTop_toTopOf="@id/edit_port"
        />

    <EditText
        android:id="@+id/edit_pass"
        android:layout_marginTop="@dimen/edit_item_marginTop"
        style="@style/EditItem"
        app:layout_constraintTop_toBottomOf="@+id/edit_port"/>

    <TextView
        android:text="@string/edit_label_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/edit_pass"
        app:layout_constraintTop_toTopOf="@id/edit_pass"
        />


</android.support.constraint.ConstraintLayout>